# Grapher

./: .clang-format  .gitignore  CMakeLists.txt  README.md  d  imgui.ini  vcpkg.json
resources/shaders/: emmit_sin.frag  emmit_sin.geom  emmit_sin.vert  point.frag  point.vert  triangle.vert
src/: main.cpp  sceneProvider.h
src/cameraController/: cameraController.cpp  cameraController.h
src/parser/: parser.cpp  parser.h
src/renderer/: input.h  renderer.cpp  renderer.h  sceneProvider.h  shader.cpp  shader.h  transform.h
src/renderer/GUI/: GUI.cpp  GUI.h  graphView.cpp  graphView.h
src/renderer/GUI/equation/: equationView.cpp  equationView.h
src/renderer/camera/: camera.cpp  camera.h
src/renderer/graph/: graph.cpp  graph.h
src/renderer/primitives/: line.cpp  line.h  point.cpp  point.h  primitive.h  square.cpp  square.h  triangle.cpp  triangle.h
src/utils/: constants.cpp  constants.h
tests/: hello_test.cpp
